# FMU4j

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
.github/workflows/: build.yml  test-linux.yml  test-windows.yml  upload-builder.yml
fmi-export/: build.gradle
fmi-export/src/main/java/no/ntnu/ais/fmu4j/modeldescription/fmi1/: FmiBaseUnit.java  FmiCausality.java  FmiCoSimulationCapabilities.java  FmiCoSimulationModel.java  FmiImplementation.java  FmiModelDescription.java  FmiScalarVariable.java  FmiType.java  FmiVariability.java  ObjectFactory.java
fmi-export/src/main/java/no/ntnu/ais/fmu4j/modeldescription/fmi2/: Fmi2Annotation.java  Fmi2Causality.java  Fmi2Initial.java  Fmi2ModelDescription.java  Fmi2ScalarVariable.java  Fmi2SimpleType.java  Fmi2Unit.java  Fmi2Variability.java  Fmi2VariableDependency.java  ObjectFactory.java
fmi-export/src/main/java/no/ntnu/ais/fmu4j/modeldescription/util/: FmiModelDescriptionUtil.java
fmi-export/src/main/kotlin/no/ntnu/ais/fmu4j/export/: BulkRead.kt  exceptions.kt  vectors.kt
fmi-export/src/main/kotlin/no/ntnu/ais/fmu4j/export/fmi2/: Fmi2Slave.kt  annotations.kt  variables.kt
fmi-export/src/test/java/no/ntnu/ais/fmu4j/export/fmi2/: Fmi2SlaveInstanceTest.java  Fmi2SlaveModelDescriptionTest.java  JavaTestingFmi2Slave.java
fmi-export/src/test/java/no/ntnu/ais/fmu4j/modeldescription/fmi1/: TestVesselFmu.java
fmi-export/src/test/java/no/ntnu/ais/fmu4j/modeldescription/fmi2/: TestTrajectoryController.java
fmi-export/src/test/kotlin/no/ntnu/ais/fmu4j/: TestExtend.kt  TestKotlinFmi2Slave.kt
fmi-export/src/test/kotlin/no/ntnu/ais/fmu4j/slaves/: KotlinTestingFmi2Slave.kt  SimpleSlave.kt
fmi-native-export/: CMakeLists.txt  build.gradle
fmi-native-export/include/fmu4j/: SlaveInstance.hpp
fmi-native-export/src/: CMakeLists.txt  SlaveInstance.cpp
fmi-native-export/src/main/cpp/: SlaveInstance.cpp
fmi-native-export/src/main/headers/fmu4j/: jni_helper.hpp
fmu-builder/: build.gradle
fmu-builder-app/: build.gradle
fmu-builder/src/main/kotlin/no/ntnu/ais/fmu4j/: FmuBuilder.kt
fmu-builder/src/test/kotlin/no/ntnu/ais/fmu4j/: TestBuilder.kt
fmu-slaves/src/main/java/no/ntnu/ais/fmu4j/slaves/: JavaSlave.java  JavaTestFmi2Slave.java
fmu-slaves/src/main/kotlin/no/ntnu/ais/fmu4j/slaves/: Identity.kt  KotlinTestFmi2Slave.kt
gradle/: jfrog.gradle
verification/: fmpy_test.py
